<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pjname"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <android.widget.Button
            android:id="@+id/ganghwa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="17sp"
            android:background="@drawable/back_frame"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:text="@string/ganghwa"/>
        <android.widget.Button
            android:id="@+id/cubejil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="17sp"
            android:background="@drawable/back_frame"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:text="@string/cubejil"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/ganghwa_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ganghwa"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/from"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_margin="5dp"/>
                <EditText
                    android:id="@+id/ganghwaFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="10dp"
                    android:background="@drawable/edittext_rounded_style"
                    android:hint="@string/from_edit_text"
                    android:textColorHint="@color/gray"
                    android:inputType="number"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/to"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:layout_margin="5dp"/>
                <EditText
                    android:id="@+id/ganghwaAfter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="10dp"
                    android:background="@drawable/edittext_rounded_style"
                    android:hint="@string/to_edit_text"
                    android:textColorHint="@color/gray"
                    android:inputType="number"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/level"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:layout_margin="5dp"/>
                <Spinner
                    android:id="@+id/levelSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/pabang"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:layout_margin="5dp"/>
                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/pabang15"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/star15"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:strokeWidth="1dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/pabang16"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/star16"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:strokeWidth="1dp" />
                </com.google.android.material.button.MaterialButtonToggleGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/starcatch"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:layout_margin="5dp"/>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/doStarcatch"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/do_star"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:strokeWidth="1dp" />
                </com.google.android.material.button.MaterialButtonToggleGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/eventtext"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:layout_margin="5dp"/>
                <Spinner
                    android:id="@+id/eventSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"/>
            </LinearLayout>

            <android.widget.Button
                android:id="@+id/calculStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_frame2"
                android:text="@string/text_calcul"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>

