<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ResultGanghwaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pjname"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:layout_margin="5dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp">
            <TextView
                android:id="@+id/startGang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textDirection"
                android:textColor="@color/black"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/endGang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textExpected"
                android:textColor="@color/black"
                android:textSize="17sp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/doGanghwaTime"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:layout_weight="1"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/doBoomTime"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:layout_weight="1"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/doUseMeso"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:layout_weight="1"
                        android:gravity="center"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/textAverage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:layout_weight="1"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/textBoom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:layout_weight="1"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/textMeso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:layout_weight="1"
                        android:gravity="center"/>
                </TableRow>
            </TableLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="주스텟"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:layout_weight="1"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="공마"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:layout_weight="1"
                        android:gravity="center"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/textJuStat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:layout_weight="1"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/textGongMa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:layout_weight="1"
                        android:gravity="center"/>
                </TableRow>
            </TableLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="돈(상위 몇%)"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:padding="5dp"/>
                </TableRow>
                <TableRow>
                    <EditText
                        android:id="@+id/textPer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:text="50"
                        android:maxLength="3"
                        android:background="@drawable/edittext_rounded_style"
                        android:inputType="number"
                        android:layout_weight="2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="="
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textHowMoney"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:background="@drawable/edittext_rounded_style"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_weight="2"/>
                </TableRow>
            </TableLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="횟수(상위 몇%)"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:padding="5dp"/>
                </TableRow>
                <TableRow>
                    <EditText
                        android:id="@+id/textPerTry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:text="50"
                        android:maxLength="3"
                        android:background="@drawable/edittext_rounded_style"
                        android:textColorHint="@color/gray"
                        android:inputType="number"
                        android:layout_weight="2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="="
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textTimeTry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:background="@drawable/edittext_rounded_style"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_weight="2"/>
                </TableRow>
            </TableLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mpd"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:layout_weight="1"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/textMpd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:layout_weight="1"
                        android:gravity="center"/>
                </TableRow>
            </TableLayout>
        </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>